# stdash

./: Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/stdash/: app.py  home.py  requirements.txt
src/stdash/pages/: err_user.py  total.py
